import out changes

--- a/distribution/debian/DEBIAN/control
+++ b/distribution/debian/DEBIAN/control
@@ -1,9 +1,9 @@
-Package: freeswitch-mod-event-kafka
-Version: 1._VERSION_
-Architecture: all
+Package: _NAME_
+Version: _VERSION_
+Architecture: _ARCH_
 Section: base
 Priority: standard
-Depends: librdkafka1 (>= 0.9.3-1), freeswitch (= _FSVERSION_)
+Depends: librdkafka1 (>= 0.9.3-1), freeswitch
 Conflicts: fk-librdkafka
 Maintainer: Kinshuk Bairagi <me@kinshuk.in>
 Description: Publish FreeSwitch Event to Kafka
